# blog-writing-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  blog.py  blogs.py
backend/app/core/: config.py  dependencies.py  llm.py  security.py
backend/app/db/: base.py  models.py
backend/app/graph/: builder.py  nodes.py  prompts.py
backend/app/schemas/: agent.py  api.py  auth.py  blogs.py
backend/app/services/: auth_service.py  blog_service.py  blogs_service.py  image_gen.py  research.py  storage.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: authApi.ts  blogApi.ts  savedBlogsApi.ts
frontend/src/components/: BlogDisplay.tsx  BlogForm.tsx  BlogSkeleton.tsx  Header.tsx  ProgressIndicator.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useBlogGeneration.ts
frontend/src/pages/: GeneratorPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  SavedBlogDetailPage.tsx  SavedBlogsPage.tsx
frontend/src/types/: index.ts
